ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapp-ingress
  namespace: project-apani-node
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: nodeapp.hibban.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodeapp-service
            port:
              number: 80
